cmake_minimum_required(VERSION 3.22)
project(Practice_Programs C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(macros macros.c)
add_executable(macroArea macroArea.c)
add_executable(unsignedSigned unsignedSigned.c)
add_executable(operators operators.c)
add_executable(average average.c)
add_executable(sort sort.c)
add_executable(avgFunction avgFunction.c)
add_executable(pointer pointer.c)
add_executable(additionPointer additionPointer.c)
add_executable(pointerToPointer pointerToPointer.c)
add_executable(danglingPointer danglingPointer.c)
add_executable(functionPointer functionPointer.c)
add_executable(stringExample stringExample.c)
add_executable(structure structure.c)
add_executable(typedefExample typedefExample.c)
add_executable(arrayStructure arrayStructure.c)
add_executable(basics6 basics6.c)
add_executable(color color.c)
add_executable(hexdump hexdump.c)
add_executable(016_hexdump 016_hexdump.c)
add_executable(histogram histogram.c)
add_executable(19_hexdump 19_hexdump.c)
add_executable(arguments arrayStructure.c)
add_executable(rotation rotation.c)
add_executable(temp_convert temp_convert.c)